--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
 
 	<name>Reexon Lib</name>
 	<description>Reexon - Reexon Lib</description>
+	<repositories>
+		<repository>
+			<id>xuggle repo</id>
+			<url>http://xuggle.googlecode.com/svn/trunk/repo/share/java/</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -35,6 +41,11 @@
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 			<version>1.10</version>
+		</dependency>
+		<dependency>
+			<groupId>xuggle</groupId>
+			<artifactId>xuggle-xuggler</artifactId>
+			<version>5.2</version>
 		</dependency>
 	</dependencies>
 
