--- a/.classpath
+++ b/.classpath
@@ -12,6 +12,12 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="ReexonLib/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=ReexonLib&amp;ivyXmlPath=ivy.xml&amp;confs=*"/>
 	<classpathentry kind="lib" path="C:/Users/Marco.Velluto/Documents/Marco/workspace/ReexonLib/lib/commons-lang3-3.3.2.jar" sourcepath="C:/Users/Marco.Velluto/Documents/Marco/workspace/ReexonLib/lib/src/commons-lang3-3.3.2"/>
 	<classpathentry kind="lib" path="C:/Users/Marco.Velluto/Documents/Marco/workspace/ReexonLib/lib/aspose-imaging-3.0.1-jdk16.jar"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
