--- a/ivy.xml
+++ b/ivy.xml
@@ -18,7 +18,9 @@
 		<dependency org="commons-io" name="commons-io" rev="2.4"/>
 		<dependency org="org.apache.commons" name="commons-lang3" rev="3.4"/>
 		<dependency org="com.google.code.gson" name="gson" rev="2.6.2"/>
-	<dependency org="org.apache.pdfbox" name="pdfbox" rev="1.8.11"/>
+		<dependency org="org.apache.pdfbox" name="pdfbox" rev="1.8.11"/>
+		<dependency org="org.jsoup" name="jsoup" rev="1.8.3"/>
+		<dependency org="com.google.code.gson" name="gson" rev="2.6.2"/>
     </dependencies>
 
 </ivy-module>
