--- a/ivy.xml
+++ b/ivy.xml
@@ -21,6 +21,8 @@
 		<dependency org="org.apache.pdfbox" name="pdfbox" rev="1.8.11"/>
 		<dependency org="org.jsoup" name="jsoup" rev="1.8.3"/>
 		<dependency org="com.google.code.gson" name="gson" rev="2.6.2"/>
+		<dependency org="org.seleniumhq.selenium" name="selenium-java" rev="2.53.0"/>
+		<dependency org="org.seleniumhq.selenium" name="selenium-server" rev="2.53.0"/>
     </dependencies>
 
 </ivy-module>
