--- a/ivy.xml
+++ b/ivy.xml
@@ -24,6 +24,7 @@
 		<dependency org="org.seleniumhq.selenium" name="selenium-java" rev="2.53.0"/>
 		<dependency org="org.seleniumhq.selenium" name="selenium-server" rev="2.53.0"/>
 		<dependency org="junit" name="junit" rev="4.12"/>
+		<dependency org="org.beanio" name="beanio" rev="2.1.0"/>
     </dependencies>
 
 </ivy-module>
