--- a/ivy.xml
+++ b/ivy.xml
@@ -25,6 +25,7 @@
 		<dependency org="org.seleniumhq.selenium" name="selenium-server" rev="2.53.0"/>
 		<dependency org="junit" name="junit" rev="4.12"/>
 		<dependency org="org.beanio" name="beanio" rev="2.1.0"/>
+		<dependency org="joda-time" name="joda-time" rev="2.9.3"/>
     </dependencies>
 
 </ivy-module>
