--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,9 @@
 language: java
+
+jdk:
+  - openjdk8
+
+install: mvn install -DskipTests=true -Dgpg.skip=true
+
+script:
+  - mvn clean verify -Dgpg.skip=true
